[package]
name = "alphabetical-lint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "*"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-bash = "0.20.3"
